# Legal

./: .dockerignore  .gitignore  pytest.ini  requirements-editable.txt
document_core/: .env.example  .env.production.example  pyproject.toml  pytest.ini
document_core/document_core/: __init__.py  config.py
document_core/document_core/embeddings/: reranker_service.py
document_core/document_core/indexer/: parent_child.py
document_core/document_core/llm/: __init__.py  ingest_llm.py
document_core/document_core/migrations/: 005_tombstone_status.sql  006_policy_freshness.sql
document_core/document_core/parser/: structured_sections.py  text_parser.py
document_core/document_core/prompts/: policy_section_categories.md
document_core/document_core/schemas/: __init__.py  category_tag.py  chunk.py  compliance.py  registry.py  taxonomy.py
document_core/document_core/search/: lexical.py  reranker.py
document_core/document_core/services/: catalog_sync.py  category_tagger.py  grounding.py  ingest.py  metadata_at_ingest.py  registry.py  registry_async.py  search.py
document_core/document_core/store/: async_adapter.py  content_hash.py  memory_store.py  pgvector_store.py  protocol.py
document_core/tests/: README.md  conftest.py  fixtures.py  test_category_tagger.py  test_content_hash.py  test_delete_policy.py  test_grounding.py  test_ingest_search.py  test_metadata_at_ingest.py  test_multi_retrieval.py  test_parent_child.py  test_pgvector_save_document.py  test_policy_freshness.py  test_register_contract.py  test_registry.py  test_registry_async.py  test_reranker.py  test_reranker_service.py  test_search_parent_category_boost.py  test_search_request_metadata.py  test_structured_ingest.py  test_taxonomy.py  test_taxonomy_aliases.py  test_text_parser.py
document_core/tests/fixtures/: acme_nda_sections.json
legal_ai_platform/: .env.example  .env.production.example  README.md  pyproject.toml
legal_ai_platform/docs/: UNIFIED_SESSION_MEMORY_PLAN.md
legal_ai_platform/src/legal_ai_platform/: config.py  container.py
legal_ai_platform/src/legal_ai_platform/auth/: dependencies.py  jwt.py  memory_namespace.py  memory_policy.py  passwords.py  principal.py  session_registry.py
legal_ai_platform/src/legal_ai_platform/db/: models.py  session.py
legal_ai_platform/src/legal_ai_platform/gateway/: app.py  auth_routes.py  server.py  sse.py
legal_ai_platform/src/legal_ai_platform/mcp/: base_client.py  document_client.py  retrieval_client.py
legal_ai_platform/src/legal_ai_platform/models/: __init__.py  (+3 more)
legal_ai_platform/tests/: conftest.py  test_classifier.py  test_gateway_auth.py  test_gateway_sse.py  test_memory_access.py  test_memory_bridge.py  test_orchestrator.py  test_orchestrator_session.py  test_research_agent.py  test_research_platform_session.py  test_research_progress.py  test_review_gateway.py  test_search_tools_bridge.py  test_service_mode_wiring.py  test_session_delete.py  test_session_long_term_memory.py  test_session_service.py
(+400 files in other folders)
