[project]
name = "legal-ai-platform"
version = "0.1.0"
description = "Legal AI Platform — API Gateway, Query Orchestrator, and Agent Registry"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.110.0",
    "hypercorn>=0.16.0",
    "cryptography>=42.0.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "sqlalchemy>=2.0.0",
    "email-validator>=2.0.0",
    # deep_research_from_scratch: install sibling package first (see requirements-editable.txt).
    # Not listed here — pip resolves file:../ paths incorrectly when installing from repo root.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
legal-ai-gateway = "legal_ai_platform.gateway.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"